# loan-default-ml-pipeline

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
data/processed/: loans_featured.csv
docs/: data_notes.md
models/: rf_loan_default.pkl
notebooks/: 01_data_profiling.ipynb  02_feature_builds.ipynb  03_model_training.ipynb
src/loan_default_ml_pipeline/features/: build_features.py
src/loan_default_ml_pipeline/ingestion/: load_data.py
src/loan_default_ml_pipeline/training/: train_model.py
src/loan_default_ml_pipeline/validation/: data_quality.py  validate_model.py
