[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-default-ml-pipeline"
version = "0.1.0"
description = "Loan default prediction ML pipeline"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "fastapi",
    "uvicorn",
    "mlflow",
    "python-dotenv"
]